# freshservice-rag

./: Cargo.toml  README.md  debug_ticket_section.html
data/scraped/: documentation.json
src/: main.rs
src/llm/: client.rs  groq_client.rs  mod.rs
src/models/: api_docs.rs  mod.rs
src/rag/: mod.rs  pipeline.rs
src/scraper/: freshservice_scraper.rs  mod.rs
src/web/: mod.rs  server.rs
